# scrcap

./: Cargo.toml  README.md
src/: convert.rs  gui.rs  gui_backend.rs  main.rs  output.rs  sway.rs
src/platform/: convert.rs  mod.rs  sway.rs
src/screenshot/: mod.rs  wayland.rs
