[package]
name = "scrcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
anyhow = "1.0.65"
gtk = { version = "0.5.4", package = "gtk4" }
wayland-client = "0.29.5"
wayland-protocols = { version = "0.29.5", features = ["staging_protocols", "unstable_protocols", "client"] }
nix = "0.26.1"
memmap2 = "0.5.8"
image = "0.24.5"
thiserror = "1.0.38"
clap = { version = "4.0.29", features = ["derive"] }
dirs = "4.0.0"
swayipc = "3.0.1"
piet = "0.6.0"
iced = "0.6.0"
